spelling: illegal
Signed-off-by: Josh Soref <2119212+jsoref@users.noreply.github.com>